[project]
name = "rsutils"
version = "0.1.0"
description = "Collection of utility functions for remote sensing."
authors = [{ name = "Nikhil Sasi Rajan", email = "nikhilsasirajan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rasterio",
    "geopandas",
    "seaborn",
    "numba",
    "numba==0.56.4",
    "s2",
    "tqdm",
    "scipy",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
